# tea_ttalps

./: .__afsF2658542D  .gitignore  .gitmodules  CMakeLists.txt
.github/: README.md
apps/: susy_test.cpp  ttalps_events_printer.cpp  ttalps_histogrammer.cpp  ttalps_skimmer.cpp
configs/: susy_test_config.py  susy_test_files_config.py  ttalps_2Dhists_config.py  ttalps_abcd_config.py  ttalps_cross_sections.py  ttalps_das_files_list.py  ttalps_das_files_list_LLPnanoAOD.py  ttalps_datacards_config.py  ttalps_events_printer_config.py  ttalps_extra_collections.py  ttalps_histogrammer_JPsiCR_config.py  ttalps_histogrammer_JPsi_config.py  ttalps_histogrammer_SR_config.py  ttalps_histogrammer_config.py  ttalps_histogrammer_default_config.py  ttalps_histogrammer_files_config.py  ttalps_histogrammer_list.py  ttalps_histogrammer_pileup_config.py  ttalps_histogrammer_signal_config.py  ttalps_histogrammer_signal_list.py  ttalps_histogrammer_trigger_config.py  ttalps_histogrammer_ttbarCR_config.py  ttalps_jec_config.py  ttalps_limits_config.py  ttalps_limits_plotter_config.py  ttalps_luminosities.py  ttalps_met_filters.py  ttalps_object_cuts.py  ttalps_object_selections.py  ttalps_plotter_JPsi_config.py  ttalps_plotter_LLPtest_config.py  ttalps_plotter_config.py  ttalps_plotter_signal_config.py  ttalps_plotting_styles.py  ttalps_plotting_styles_QCDCR.py  ttalps_plotting_styles_SR.py  ttalps_plotting_styles_WjetsCR.py  ttalps_plotting_styles_bbCR.py  ttalps_plotting_styles_ttCR.py  ttalps_plotting_styles_ttCR_electron.py  (+35 more)
crazyBug_testFiles/: print_crazyBug.py
data/: JPsiCRsf2018.json  ST_tW_antitop_5f_NoFullyHadronicDecays_TuneCP5CR1_13TeV-powheg-pythia8_2016PostVFP.txt  TTZH_TuneCP5_13TeV-madgraph-pythia8_2016postVFP.txt  TTtoLNu2Q_TuneCP5_13p6TeV_powheg-pythia8_2022PreEE.txt  TTtoLNu2Q_TuneCP5_13p6TeV_powheg-pythia8_2022postEE.txt  sf2018.json
templates/: HistogramsFiller.template.cpp
utils/: TTAlpsABCDConfigHelper.py  TTAlpsHistogrammerConfigHelper.py  TTAlpsLimitsPlotterHelper.py  TTAlpsPlotterConfigHelper.py  TdAlps.py  clean_up_dust.py  count_events.py  count_files.py  count_hem_events.py  find_missing_files.py  get_dataMC_ratio_plots.py  hadd_safe.py  merge_histograms.py  merge_nanoAOD_files.py  norm_test.py  physics.py  plot_L1prefiring_comparison.py  plot_crazyBug.py  plot_dimuon_resonances.py  plot_jetVetoMaps.py  print_rates_and_uncertainties.py  print_uncertainties.py  run_abcd_optimization.py  susy_merge_histograms.py  ttalps_analyze_abcd_background_mothers.py  ttalps_analyze_abcd_mothers.py  ttalps_analyze_fakes.py  ttalps_analyze_lhe_weights.py  ttalps_calculate_pileup_scale_factors.py  ttalps_combine_limits.py  (+15 more)
(+49 files in other folders)
